# libbaseencode

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  SECURITY.md  baseencode.pc.in  shippable.yml
.ci/: run_tests.sh
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
src/: base32.c  base64.c  baseencode.h  common.h
tests/: CMakeLists.txt  test-base32-decode.c  test-base32-encode.c  test-base64-decode.c  test-base64-encode.c
tests/docker/: Dockerfile
